<resources>
    <string name="app_name">MyCity Cluj-Napoca</string>
    <string name="server_url">http://localhost:8081/api</string>
    <string name="username">Username*</string>
    <string name="password">Password*</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_events">Events</string>
    <string name="title_institutions">Institutions</string>
    <string name="title_news">News</string>
    <string name="title_facilities">Facilities</string>
    <string name="title_issues">Issues</string>
    <string name="title_report_issue">Report an Issue</string>
    <string name="report_issue_button">Report Issue</string>

    <string name="invalid_username">Username cannot be empty</string>
    <string name="invalid_password">Password cannot be empty</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="take_photo_option">Take Photo</string>
    <string name="upload_photo_option">Choose Photo</string>
    <string name="upload_image_field">Upload Photo*</string>
    <string name="description_field">Description*</string>
    <string name="title_field">Title*</string>
    <string name="issue_type_field">Type*</string>
    <string name="choose_location_field">Select Location*</string>
    <string name="submit_issue_button">Submit Issue</string>
    <string name="issue_location_prompt">Select issue location by searching for an address, putting the pin on the map or using your current location.</string>
    <string name="use_current_location">Use current location</string>
    <string name="confirm_location">Confirm</string>
    <string name="go_to_official_website">Go to official website</string>
    <string name="directions">Directions</string>
    <string name="website">Website</string>
    <string name="my_events">My Events</string>
    <string name="favorites">Favorites</string>
    <string name="create_event">Create event</string>
    <string name="location">Location*</string>
    <string name="start_date">Start Date*</string>
    <string name="start_hour">Start Time*</string>
    <string name="end_hour">End Time</string>
    <string name="end_date">End Date</string>
    <string name="involved_institutions">Involved Institutions</string>
    <string name="institution">Institution</string>
    <string name="status">Status</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="chat_helper">In this chat section you can ask questions about the issue you submitted, or provide further clarifications to the institutions that are solving it</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="alerts">Alerts</string>
    <string name="in_this_section_you_can_view_the_issues_you_have_submitted">In this section you can view the details of the issues you have submitted.\nTo report a new issue, click the button in the bottom right of the screen.</string>
    <string name="all">All</string>
    <string name="profile">Profile</string>
    <string name="change_name">Change Name</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="issues_reported">Issues Reported</string>
    <string name="events_created">Events Created</string>
    <string name="sign_up_to_n_community_app_n_cluj_napoca">Sign up to\n MyCity App\n Cluj-Napoca</string>
</resources>