<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:src="@drawable/cluj"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"

        >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"

        >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/log_in"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/log_in"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:id="@+id/auth_message"
        android:textSize="16sp"
        android:text="@string/invalid_credentials"
        android:textStyle="bold"
        android:visibility="gone"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/don_t_have_an_account"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/go_to_sign_up_button"
        />







</LinearLayout>