<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_title_layout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/event_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/title_field"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_type_layout"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        android:hint="@string/issue_type_field">

        <AutoCompleteTextView
            android:id="@+id/event_types_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/event_location_layout"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/event_location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/location"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/event_start_date_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/event_start_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/start_date"
                android:importantForAutofill="no"
                android:focusable="false"
                android:cursorVisible="false"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:id="@+id/event_start_time_layout"
            android:layout_marginEnd="20dp"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/event_start_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/start_hour"
                android:importantForAutofill="no"
                android:focusable="false"
                android:cursorVisible="false"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            >

            <EditText
                android:id="@+id/event_end_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/end_date"
                android:importantForAutofill="no"
                android:focusable="false"
                android:cursorVisible="false"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            >

            <EditText
                android:id="@+id/event_end_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/end_hour"
                android:importantForAutofill="no"
                android:focusable="false"
                android:cursorVisible="false"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:id="@+id/event_description_layout"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/event_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_field"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="5"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:id="@+id/event_photo_layout"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/upload_image_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="text"
            android:hint="@string/upload_image_field"
            android:focusable="false"

            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/create_event"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/create_event_button"
        />



</LinearLayout>