<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    >



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:errorEnabled="true"
        android:id="@+id/issue_type_layout"
        android:layout_marginTop="40dp"
        android:hint="@string/issue_type_field">

        <AutoCompleteTextView
            android:id="@+id/issue_types_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:errorEnabled="true"
        android:id="@+id/issue_title_layout"
        >

        <EditText
            android:id="@+id/issue_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/title_field"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:errorEnabled="true"
        android:id="@+id/issue_description_layout"
        >

        <EditText
            android:id="@+id/issue_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_field"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="6"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:errorEnabled="true"
        android:id="@+id/issue_photo_layout"
        >

        <EditText
            android:id="@+id/upload_image_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="text"
            android:hint="@string/upload_image_field"
            android:focusable="false"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/issue_location_layout"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/choose_location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="text"
            android:hint="@string/choose_location_field"
            android:focusable="false"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/submit_issue_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/submit_issue"
        />



</LinearLayout>