<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginBottom="45dp"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_message_layout"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:id="@+id/send_message_layout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"


        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginTop="-10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

        <EditText
            android:id="@+id/chat_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/type_a_message"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/send"
            android:src="@drawable/send"
            android:tint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/chat_helper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/chat_helper"
        android:visibility="gone" />

</RelativeLayout>
